--- a/二分查找/34_在排序数组中查找元素的第一个和最后一个位置.md
+++ b/二分查找/34_在排序数组中查找元素的第一个和最后一个位置.md
@@ -4,7 +4,7 @@
 
 1. 寻找`左侧`边界:
 
-&emsp;&emsp `if nums[mid] == target: right = mid -1  # 缩小右边界`
+&emsp;&emsp; `if nums[mid] == target: right = mid -1  # 缩小右边界`
 
 最终的判定条件:
 ```
@@ -19,7 +19,7 @@ else:
 
 2. 寻找`右侧`边界:
 
-&emsp;&emsp `if nums[mid] == target: left = mid + 1  # 增大左边界`
+&emsp;&emsp; `if nums[mid] == target: left = mid + 1  # 增大左边界`
 
 最终的判定条件:
 ```
